Create vue package.json changes

--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "personal-website",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "vue-template-compiler": "^2.6.11"
-  }
+	"author": "Muhammed Salih Gumus",
+	"name": "personal-website",
+	"version": "0.0.0",
+	"private": true,
+	"license": "MIT",
+	"repository": "https://github.com/sudanmerinosu/personal-website",
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build"
+	},
+	"dependencies": {
+		"core-js": "^3.6.5",
+		"vue": "^2.6.11"
+	},
+	"devDependencies": {
+		"@vue/cli-plugin-babel": "~4.5.0",
+		"@vue/cli-service": "~4.5.0",
+		"vue-template-compiler": "^2.6.11"
+	}
 }
